--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="header">
             <div class="container">
-                <nav><img src="portimages/logo.jpeg" class="logo" >
+                <nav><img src="logo.jpeg" class="logo" >
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="portimages/mypic.jpeg" alt="">
+                <img src="mypic.jpeg" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -103,7 +103,7 @@
         <h1 class="sub-title">My Portfolio</h1>
         <div class="work-list">
             <div class="work">
-                <img src="portimages/dnaport.png">
+                <img src="dnaport.png">
                 <div class="layer">
                     <h3>DNA Fingerprinting</h3>
                     <p>Website to match DNA can be used in Forensic, Education Purpose, Biotech Research work, etc</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="portimages/gglport.png">
+                <img src="gglport.png">
                 <div class="layer">
                     <h3>Google Web-Page Clone</h3>
                     <p>Built clone of Google web page for my CS-50 EDX Harvard course on web development</p>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="portimages/portport.png">
+                <img src="portport.png">
                 <div class="layer">
                     <h3>Portfolio</h3>
                     <p>built my personal portfolio with HTML, CSS and JS</p>
@@ -145,7 +145,7 @@
                                 <a href="www.linkedin.com/in/jyoti-sangwan"><i class="fa-brands fa-linkedin"></i></a>
                                 <a href="https://www.youtube.com/channel/UCL-c2MG2xlfPJa3YAGR3raQ"><i class="fa-brands fa-youtube"></i></a>
                             </div>
-                    <a href="portimages/CVMY.pdf" download class="btn btn2">Download CV</a>
+                    <a href="CVMY.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                     <form name="submit-to-google-sheet">
